# rtype

./: .gitignore  CMakeLists.txt  assets  rfc.txt  rtype.sln
UML/: Client.dia  R-Type.dia  Server.dia
client/: CMakeLists.txt  client.vcxproj
client/include/: ArgParser.hpp  Client.hpp  Printer.hpp
client/include/core/: GameCore.hpp
client/include/game/: AEntity.hpp  Player.hpp
client/include/gui/: IEvent.hpp  IInputHandler.hpp  IMusic.hpp  IView.hpp  IWindow.hpp  MainWindow.hpp  SceneManager.hpp
client/include/gui/anim/: FadeAnimation.hpp  FrameAnimation.hpp  IAnimation.hpp  KeyAnimation.hpp
client/include/gui/gfx/: ABackground.hpp  ADrawable.hpp  BlueStarsBackground.hpp  ImageDrawable.hpp  InsideMineBackground.hpp  InsideShipBackground.hpp  MobDrawable.hpp  PlayerDrawable.hpp
client/include/gui/res/: ResFontLoader.hpp  ResImageLoader.hpp  ResLoader.hpp  ResMusicLoader.hpp  ResPool.hpp  ResSoundLoader.hpp
client/include/gui/scenes/: AScene.hpp  GameBoardScene.hpp  GameMenuScene.hpp  LoadingScene.hpp
client/include/gui/sfml/: SFMLClock.hpp  SFMLEvent.hpp  SFMLFont.hpp  SFMLImage.hpp  SFMLInputHandler.hpp  SFMLMusic.hpp  SFMLRectangle.hpp  SFMLSound.hpp  SFMLText.hpp  SFMLTexture.hpp  SFMLWindow.hpp
client/include/net/: IClientSocket.hpp  IManager.hpp  IServerSocket.hpp  Network.hpp  TCPClientSocket.hpp  TCPManager.hpp  UDPClientSocket.hpp  UDPManager.hpp  UDPServerSocket.hpp
client/include/net/exceptions/: DisconnectionException.hpp
client/include/packet/: PacketProcesser.hpp  PacketReceiver.hpp  PacketSender.hpp
client/include/packet/protocol/: EndPacket.hpp  EntityPacket.hpp  HelloPacket.hpp  IProtocol.hpp  MapPacket.hpp  PortPacket.hpp  ReadyPacket.hpp  SpawnPacket.hpp
client/src/: ArgParser.cpp  Client.cpp  Main.cpp  Printer.cpp
client/src/core/: GameCore.cpp
client/src/game/: AEntity.cpp  Player.cpp
client/src/gui/: MainWindow.cpp  SceneManager.cpp
client/src/gui/anim/: FadeAnimation.cpp  FrameAnimation.cpp  KeyAnimation.cpp
client/src/gui/gfx/: ABackground.cpp  ADrawable.cpp  BlueStarsBackground.cpp  ImageDrawable.cpp  InsideMineBackground.cpp  InsideShipBackground.cpp  MobDrawable.cpp  PlayerDrawable.cpp
client/src/gui/res/: ResFontLoader.cpp  ResImageLoader.cpp  ResLoader.cpp  ResMusicLoader.cpp  ResPool.cpp  ResSoundLoader.cpp
client/src/gui/scenes/: AScene.cpp  GameBoardScene.cpp  GameMenuScene.cpp  LoadingScene.cpp
client/src/gui/sfml/: SFMLClock.cpp  SFMLEvent.cpp  SFMLFont.cpp  SFMLImage.cpp  SFMLInputHandler.cpp  SFMLMusic.cpp  SFMLRectangle.cpp  SFMLSound.cpp  SFMLText.cpp  SFMLTexture.cpp  SFMLWindow.cpp
client/src/net/: Network.cpp  TCPClientSocket.cpp  TCPManager.cpp  UDPClientSocket.cpp  UDPManager.cpp  UDPServerSocket.cpp
client/src/packet/: PacketProcesser.cpp  PacketReceiver.cpp  PacketSender.cpp
client/src/packet/protocol/: EndPacket.cpp  EntityPacket.cpp  HelloPacket.cpp  MapPacket.cpp  PortPacket.cpp  ReadyPacket.cpp  SpawnPacket.cpp
maps/: Default.map
mobs/: CMakeLists.txt  IMob.hpp
mobs/MineMob/: CMakeLists.txt  MineMob.cpp  MineMob.hpp
mobs/ShipMob/: CMakeLists.txt  ShipMob.cpp  ShipMob.hpp
mobs/SpaceMob/: CMakeLists.txt  SpaceMob.cpp  SpaceMob.hpp
server/: CMakeLists.txt  server.vcxproj
server/include/: ACore.hpp  ArgumentParser.hpp  Converter.hpp  Core.hpp  GameUpdater.hpp
server/include/exceptions/: ArgumentParserException.hpp  LoadManagerException.hpp  LoaderException.hpp  NetClientException.hpp  SigIntException.hpp  SocketException.hpp  TCPServerException.hpp
server/include/game/: AEntity.hpp  Entity.hpp  EntityFactory.hpp  MobSpawner.hpp  Player.hpp  World.hpp
server/include/game/component/: ACollidable.hpp  AIComponent.hpp  Damage.hpp  Direction.hpp  EnemyCollidable.hpp  EnemyProjectileCollidable.hpp  Fire.hpp  Health.hpp  IComponent.hpp  PlayerCollidable.hpp  PlayerProjectileCollidable.hpp  Position.hpp  Removable.hpp  RigidBody.hpp  Sprite.hpp  Velocity.hpp
server/include/game/map/: MapPool.hpp
server/include/game/system/: AISystem.hpp  ASystem.hpp  CollisionSystem.hpp  FireSystem.hpp  HealthSystem.hpp  MovementSystem.hpp  RemovingSystem.hpp  SystemManager.hpp
server/include/json/: JSONArray.hpp  JSONException.hpp  JSONObject.hpp  JSONParser.hpp  Parser.hpp
server/include/loader/: ADllLoader.hpp  ALoader.hpp  ASoLoader.hpp  DllLoader.hpp  ILoader.hpp  LoadManager.hpp  SoLoader.hpp
server/include/net/: ANetClient.hpp  ASocket.hpp  ATCPSocket.hpp  AUDPSocket.hpp  ISocket.h  NetClient.hpp  Poll.hpp  SocketAddress.hpp  TCPClientSocket.hpp  TCPServer.hpp  TCPServerSocket.hpp  UDPSocket.hpp
server/include/packet/: PacketProcesser.hpp  PacketReceiver.hpp  PacketSender.hpp
server/include/packet/protocol/: EntityPacket.hpp  HelloPacket.hpp  IProtocol.hpp  MapPacket.hpp  PortPacket.hpp  ReadyPacket.hpp
server/src/: ACore.cpp  ArgumentParser.cpp  Converter.cpp  Core.cpp  GameUpdater.cpp  main.cpp
server/src/game/: AEntity.cpp  Entity.cpp  EntityFactory.cpp  MobSpawner.cpp  Player.cpp  World.cpp
server/src/game/component/: ACollidable.cpp  AIComponent.cpp  Damage.cpp  Direction.cpp  EnemyCollidable.cpp  EnemyProjectileCollidable.cpp  Fire.cpp  Health.cpp  PlayerCollidable.cpp  PlayerProjectileCollidable.cpp  Position.cpp  Removable.cpp  RigidBody.cpp  Sprite.cpp  Velocity.cpp
server/src/game/map/: MapPool.cpp
server/src/game/system/: AISystem.cpp  ASystem.cpp  ColllisionSystem.cpp  FireSystem.cpp  HealthSystem.cpp  MovementSystem.cpp  RemovingSystem.cpp  SystemManager.cpp
server/src/json/: JSONArray.cpp  JSONObject.cpp  JSONParser.cpp  Parser.cpp
server/src/loader/: ADllLoader.cpp  ASoLoader.cpp  DllLoader.cpp  LoadManager.cpp  SoLoader.cpp
server/src/net/: ASocket.cpp  ATCPSocket.cpp  AUDPSocket.cpp  NetClient.cpp  Poll.cpp  SocketAddress.cpp  TCPClientSocket.cpp  TCPServer.cpp  TCPServerSocket.cpp  UDPSocket.cpp
server/src/packet/: PacketProcesser.cpp  PacketReceiver.cpp  PacketSender.cpp
server/src/packet/protocol/: EntityPacket.cpp  HelloPacket.cpp  MapPacket.cpp  PortPacket.cpp  ReadyPacket.cpp
shared/: shared.vcxproj
shared/include/net/: ISocket.h  (+3 more)
(+37 files in other folders)
